# typed_squirrel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  typed_squirrel.code-workspace
assets/shaders/: base.frag  base.vert  geoTest.frag  geoTest.geom  grid.frag  quad.frag  test.comp
include/: behavior.hpp  camera.hpp  cameraComponent.hpp  component.hpp  core.hpp  dual_quaternion.hpp  editor.hpp  engine.hpp  entity.hpp  error_codes.hpp  event.hpp  eventSystem.hpp  graphics.hpp  inputAction.hpp  inputDevice.hpp  inputSystem.hpp  keyList.hpp  keyboard.hpp  math_types.hpp  mesh.hpp  model.hpp  modelManager.hpp  module.hpp  module_container.hpp  mouse.hpp  object.hpp  objectRenderer.hpp  quaternion.hpp  shader.hpp  shaderManager.hpp  simdQuaternion.hpp  simdQuaternionTests.hpp  system.hpp  system_container.hpp  transform.hpp  window.hpp  world.hpp  world_component.hpp
include/editor_windows/: world_editor.hpp
include/tests/: glmQuaternionTests.hpp  quaternionTests.hpp
include/utils/: crash_handler.hpp  profiler.hpp  time_manager.hpp  timer.hpp  trace.hpp
src/: cameraComponent.cpp  component.cpp  editor.cpp  engine.cpp  eventSystem.cpp  graphics.cpp  inputAction.cpp  inputSystem.cpp  keyboard.cpp  main.cpp  mesh.cpp  model.cpp  modelManager.cpp  module.cpp  module_container.cpp  mouse.cpp  objectRenderer.cpp  quaternion.cpp  shader.cpp  shaderManager.cpp  simdQuaternion.cpp  system.cpp  system_container.cpp  transform.cpp  window.cpp  world.cpp  world_component.cpp
src/editor_windows/: world_editor.cpp
src/tests/: glmQuaternionTests.cpp  quaternionTests.cpp  simdQuaternionTests.cpp
src/utils/: crash_handler.cpp  profiler.cpp  time_manager.cpp  timer.cpp  trace.cpp
